--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p>选择难度
   <li> <a href="https://mcs-time.github.io/mingchaosans-RFF-V1.55/">中等</a> </li>
   <li> <a href="https://jcw87.github.io/c2-sans-fight">简单</a> </li>
-  <li> <a href="https://mcs-time.github.io/Hard-Mode-mingchaosans-fight/">困难</a><coler>red</coler> </li>
+  <li> <a href="https://mcs-time.github.io/Hard-Mode-mingchaosans-fight/">困难</a> </li>
 </ul>
 </body> 
 </html> 
